--- a/ДЗ-4/card_2.html
+++ b/ДЗ-4/card_2.html
@@ -23,8 +23,8 @@
       </select>
     </div>
     <div class="card_2__buttons">
-      <button>Cancel</button>
-      <button>Deploy</button>
+      <button class="btn__outlined">Cancel</button>
+      <button class="btn__filled" >Deploy</button>
     </div>
   </div>
 </body>
